--- a/systemtest/pom.xml
+++ b/systemtest/pom.xml
@@ -188,5 +188,12 @@
                 <groups>flaky | cci_flaky</groups>
             </properties>
         </profile>
+        <profile>
+            <id>bridge</id>
+            <properties>
+                <skipTests>false</skipTests>
+                <groups>bridge</groups>
+            </properties>
+        </profile>
     </profiles>
 </project>
